k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wonderlust
  labels:
    app.kubernetes.io/name: wonderlust
    app.kubernetes.io/managed-by: kustomize
